--- a/views/student.ejs
+++ b/views/student.ejs
@@ -2,7 +2,7 @@
 <%- include('includes/_header') %>
 <!--header section-->
    
-<h2>this is unisc page</h2>
+<h2>this is student page</h2>
 
 <!--footer section-->
 <%- include('includes/_footer') %>
