login and authentication

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -40,6 +40,10 @@
             </div>
 
             <button type="submit">Register</button>
+
+            <p class="login-link">
+                Already have an account? <a href="/student/login">login here</a>
+            </p>
         </form>
     </div>
 </div>
