--- a/views/student.ejs
+++ b/views/student.ejs
@@ -1,8 +1,30 @@
 <!--header section-->
-<%- include('includes/_header') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/choose.css">
+</head>
+<body>
+
+
 <!--header section-->
    
-<h2>this is student page</h2>
+<!--prefaceing content-->
+<div class="logo-background">
+    <div class="overlay">
+        <div class="button-container">
+            <h1>Welcome</h1>
+            <div class="buttons">
+                <a href="/student/login" class="btn">Student</a>
+                <a href="/college/login" class="btn">College</a>
+            </div>
+        </div>
+    </div>
+</div>
+<!--prefaceing content-->
 
 <!--footer section-->
 <%- include('includes/_footer') %>
