--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,28 @@ button:hover {
     background-color: #0056b3;
 }
 
+
+.register-link, .login-link {
+    margin-top: 17px;
+    font-size: 12px;
+}
+
+.register-link a {
+    color: #007bff;
+    text-decoration: none;
+}
+.login-link a{
+    color: #007bff;
+    text-decoration: none;
+}
+
+.register-link a:hover {
+    text-decoration: underline;
+}
+.login-link a:hover {
+    text-decoration: underline;
+}
+
 @media (max-width: 500px) {
     .container {
         padding: 15px;
