authentication and pending college

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -41,7 +41,7 @@
 
             <button type="submit">Register</button>
 
-            <p class="login-link">
+            <p class="register-login-link">
                 Already have an account? <a href="/student/login">login here</a>
             </p>
         </form>
