--- a/views/collegeLogin.ejs
+++ b/views/collegeLogin.ejs
@@ -1,15 +1,14 @@
 <!--header section-->
-<%-include('includes/_header')  %>
+<%- include('includes/_header') %>
 <!--header section-->
 
-<!--login section-->
 <div class="container">
     <div class="form-box">
-        <h2>Login</h2>
-        <form action="/student/login" method="POST">
+        <h2>College Login</h2>
+        <form action="/college/login" method="POST">
             <div class="input-box">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                <label for="collegeEmail">College Email</label>
+                <input type="email" id="collegeEmail" name="collegeEmail" placeholder="Enter your college email" required>
             </div>
 
             <div class="input-box">
@@ -20,13 +19,12 @@
             <button type="submit">Login</button>
 
             <p class="register-login-link">
-                Don't have an account? <a href="/student/register">Register here</a>
+                Don't have an account? <a href="/college/register">Register here</a>
             </p>
         </form>
     </div>
 </div>
-<!--login section-->
 
 <!--footer section-->
-<%-include('includes/_footer')  %>
+<%- include('includes/_footer') %>
 <!--footer section-->
